--- a/wp-content/themes/tictac/style.css
+++ b/wp-content/themes/tictac/style.css
@@ -553,6 +553,15 @@ input.checkboxtienda:checked {
 	width: 100%;
 }
 
+@media (max-width:1445px){
+	#header .divheader{
+		width: 90% !important;
+	}
+	#header .divheader nav ul{
+		width: 82% !important;
+	}
+}
+
 @media (max-width:1025px) {
 	.fila_iconos .icono-box {
 		width: 50%;
@@ -2402,7 +2411,7 @@ body .storefront-sorting {
 }
 
 body #gt_float_wrapper .gt_float_switcher {
-	border-radius: 15px !important;
+	border-radius: 4px !important;
 }
 
 body #gt_float_wrapper .gt_options a:nth-of-type(1) {
