--- a/wp-content/plugins/sistema-reservas/assets/css/frontend-sthle.css
+++ b/wp-content/plugins/sistema-reservas/assets/css/frontend-sthle.css
@@ -79,6 +79,7 @@
     text-align: center;
     font-weight: bold;
     font-size: 14px;
+    margin-bottom: 5px;
 }
 
 .calendar-day {
@@ -284,9 +285,8 @@
 }
 
 .complete-btn:hover {
-    background: #F1C40F;
+    background: #EFCF4B;
     transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 /* === NAVEGACIÓN === */
