--- a/wp-content/themes/tictac/assets/functions/blocks/horarios/horarios.scss
+++ b/wp-content/themes/tictac/assets/functions/blocks/horarios/horarios.scss
@@ -135,11 +135,9 @@
         }
 
         .horarios-boton:hover {
-            background-color: #F1C40F;
             transform: translateY(-2px);
-            box-shadow: 0 6px 15px rgba(0,0,0,0.2);
             text-decoration: none;
-            color: #2E2D2C;
+            background-color: #efcf4b;
         }
 
         /* Responsive */
