--- a/wp-content/themes/tictac/assets/style/footer.sass
+++ b/wp-content/themes/tictac/assets/style/footer.sass
@@ -1,6 +1,7 @@
 @import 'colors.sass'
 #footer
-    background-color: #fccb0082
+    background: #EFCF4B
+    mix-blend-mode: multiply
     .copyright
         width: 100%
         position: relative
