--- a/wp-content/plugins/sistema-reservas/assets/css/frontend-style.css
+++ b/wp-content/plugins/sistema-reservas/assets/css/frontend-style.css
@@ -38,7 +38,22 @@
     letter-spacing: 1px !important;
 }
 
-*{
+.booking-steps-grid span{
+    font-family: 'Duran-Regular';
+}
+.booking-steps-grid label{
+    font-family: 'Duran-Regular';
+}
+.booking-steps-grid div{
+    font-family: 'Duran-Regular';
+}
+#reservas-detalles span{
+    font-family: 'Duran-Regular';
+}
+#reservas-detalles label{
+    font-family: 'Duran-Regular';
+}
+#reservas-detalles div{
     font-family: 'Duran-Regular';
 }
 
@@ -349,9 +364,8 @@ color: black;
 }
 
 .complete-btn:hover {
-    background: #F1C40F;
+    background: #EFCF4B;
     transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 /* === NAVEGACIÓN === */
@@ -450,7 +464,6 @@ color: black;
 /* Secciones individuales */
 .details-section {
     padding: 20px;
-    border-right: 1px solid #ddd;
 }
 
 .details-section:last-child {
@@ -489,7 +502,7 @@ color: black;
 }
 
 .total-row .label {
-    font-size: 22px;
+    font-size: 25px;
     color: #000;
 }
 
@@ -557,8 +570,8 @@ color: black;
     margin-bottom: 15px;
 }
 
-.form-group input {
-    width: 100%;
+#personal-data-form .form-group input {
+    width: 100% !important;
     padding: 12px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -695,7 +708,6 @@ color: black;
 
 .details-section {
     padding: 30px;
-    border-right: 1px solid #ddd;
 }
 
 .details-section:last-child {
@@ -729,15 +741,16 @@ color: black;
 
 
 .total-row .label {
-    font-size: 16px;
+    font-size: 25px;
     color: #000;
 }
 
 .total-row .value {
-    font-size: 25px;
+    font-size: 28px;
     color: #871727;
     font-weight: bold;
     margin: 0px !important;
+    font-family: 'Duran-Bold';
 }
 
 .confirm-section {
@@ -857,7 +870,7 @@ color: black;
     border-radius: 10px;
     letter-spacing: 1px;
     margin: 0 auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 2px 4px 0px;
 }
 
 .form-group input, .form-group textarea{
@@ -865,9 +878,8 @@ color: black;
 }
 
 .process-btn:hover {
-    background: #F1C40F;
+    background: #EFCF4B;
     transform: translateY(-2px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 768px) {
